scss/molgenis/theme-4/_custom.scss
.dropdown-toggle {
    input {
        background: $body-bg;
    }

    &::after {
        border-bottom: 0;
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;
        border-top: 4px solid;
        content: '';
        display: inline-block;
        margin-left: 4px;
        margin-top: 22px;
        position: absolute;
    }
}

.dropdown-menu {
    // Bootstrap 4 doesn't add a shadow.
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);

    .dropdown-item:hover {
        a {
            color: $mg-color-secondary-contrast;
        }
    }

    a {
        height: 35px;
        line-height: 35px;
        padding: 0 $mg-spacer / 2;
        vertical-align: middle;
    }
}

// Navigator table.
.container {
    .table-container {
        background: $table-bg;
        height: auto;

        table {
            margin-bottom: 0;
        }
    }
}

// cke editor (frontpage)
/* stylelint-disable-next-line */
.cke.cke_chrome {
    border: 1px solid $mg-border-color;
    box-shadow: none;
    /* stylelint-disable-next-line */
    .cke_top {
        background: $mg-color-grey-100;
        background-image: none;
        border-bottom: 1px solid $mg-border-color;
    }
    /* stylelint-disable-next-line */
    .cke_bottom {
        background: $mg-color-grey-100;
        background-image: none;
    }
}

.card-header {
    &:focus {
        outline: 0;
    }
}

/*
* 'custom-select' bootstrap class gives a bootstrap styled select box
* This makes us be able to change te styling on safari.
* Note that bootstrap 5 has this property, this can be removed on upgrade
*/
.custom-select {
    -webkit-appearance: none;
}

// Fix: make scrolling in mobile menu posible
@media (max-width: 1222px) {
    .fixed-top {
        max-height: 100vh;
        overflow: auto;
    }
}

